--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "request": "^2.88.0",
     "cross-env": "^5.1.4",
     "autoprefixer": "^9.3.1",
@@ -28,9 +29,11 @@
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-babel": "^8.0.0",
     "gulp-iconfont": "^10.0.2",
     "gulp-iconfont-css": "^2.3.0",
-    "less": "^3.8.1"
+    "less": "^3.8.1",
+    "typescript": "^3.1.6"
   },
   "dependencies": {
     "miniprogram-computed": "0.0.6"
